--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-certifi==2018.1.18
+certifi==2018.4.16
+cycler==0.10.0
+Cython==0.28.1
+decorator==4.3.0
 dxfgrabber==0.8.4
+future==0.16.0
+hyperopt==0.1
+kiwisolver==1.0.1
+lightgbm==2.1.0
+matplotlib==2.2.2
 mkl-fft==1.0.0
 mkl-random==1.0.1
+networkx==2.1
+nose==1.3.7
 numpy==1.14.2
 pandas==0.22.0
+pymongo==3.4.0
+pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.3
+scikit-learn==0.19.1
+scipy==1.0.1
 Shapely==1.6.4.post1
 six==1.11.0
+tornado==5.0.2
